--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "grunt-contrib-jshint": "latest",
     "grunt-contrib-sass": "latest",
     "grunt-contrib-uglify": "latest",
-    "grunt-contrib-watch": "latest",
+    "grunt-contrib-watch": "^1.0.0",
     "grunt-postcss": "^0.9.0",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
